# AI_CodeStandardizationAndReview

./: BOB.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_VERIFICATION_REPORT.md  FIX_SUMMARY_REPORT.md  IMPLEMENTATION_COMPLETE.md  README.md  SETUP_NOTES.md  bob_AI_coding_and_review.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py
backend/app/models/: __init__.py  board.py  card.py  column.py
backend/app/routes/: __init__.py  boards.py  cards.py  columns.py
backend/app/schemas/: __init__.py  board.py  card.py  column.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/boards/[id]/: page.tsx
frontend/lib/: api.ts  types.ts
